--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -40,11 +40,14 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.2.1f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Puzzle Objects\Mechanism.cs" />
      <Compile Include="Assets\Scripts\Puzzle Objects\PressurePlateHandler.cs" />
      <Compile Include="Assets\Scripts\Puzzle Objects\BoxHandler.cs" />
+     <Compile Include="Assets\Scripts\Puzzle Objects\ButtonHandler.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Puzzle Objects\SpikesHandler.cs" />
      <Compile Include="Assets\Scripts\World\ExitHandler.cs" />
+     <Compile Include="Assets\Scripts\Puzzle Objects\LockedDoorHandler.cs" />
      <Compile Include="Assets\Scripts\World\EntranceHandler.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2022.2.1f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
