--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\World\ExitHandler.cs" />
      <Compile Include="Assets\Scripts\Puzzle Objects\LockedDoorHandler.cs" />
      <Compile Include="Assets\Scripts\World\EntranceHandler.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2022.2.1f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
