Removed Code - PlayerMovement now ready for members

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 Library/
+Temp/__Backupscenes/0.backup
+Temp/FSTimeGet-3c0683abc5a841b4d86560d8a7f4216b
+Temp/FSTimeGet-554244ceb0e62d941bd1f30fea38a644
+Temp/FSTimeGet-bdeb34b6df5841a4ba3129dd65d9ef1d
+Temp/UnityLockfile
+Temp/workerlic
